feat: Adjust global background color variable to a new oklch value.

--- a/app/globals.css
+++ b/app/globals.css
@@ -79,7 +79,7 @@ body {
   /* --background: oklch(0.98 0.015 105); */
   /* --background: oklch(0.98 0.02 105); */
 
-  --background: oklch(0.9608 0.0374 125.21);
+  --background: oklch(96.526% 0.0357 115.669);
 
   /* --background: oklch(0.98 0.03 105); */
   /* --background: oklch(0.98 0.04 105); */
